--- a/Search_and_Sample_Return.ipynb
+++ b/Search_and_Sample_Return.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPozrNOgD0nAK7XkDWVabUf",
+      "authorship_tag": "ABX9TyONXDAPOERMFWAV9JwE4M+f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -321,7 +321,7 @@
         "# This enables the interactive matplotlib window\n",
         "#%matplotlib notebook\n",
         "\n",
-        "!wget \"https://s3-us-west-1.amazonaws.com/udacity-robotics/Rover+Unity+Sims/Rover+Example+Images/example_grid1.jpg\"\n",
+        "# !wget \"https://s3-us-west-1.amazonaws.com/udacity-robotics/Rover+Unity+Sims/Rover+Example+Images/example_grid1.jpg\"\n",
         "image = mpimg.imread('example_grid1.jpg')\n",
         "plt.imshow(image)\n",
         "plt.show()"
@@ -329,30 +329,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 524
+          "height": 313
         },
         "id": "cy7zCgM7q64d",
-        "outputId": "d89fdc8e-a6bf-4c80-adc1-e7795cdc4354"
+        "outputId": "11c5888c-5c10-4a0e-b9d8-0cc839ea0cb4"
       },
-      "execution_count": 49,
+      "execution_count": 1,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2023-08-07 15:49:26--  https://s3-us-west-1.amazonaws.com/udacity-robotics/Rover+Unity+Sims/Rover+Example+Images/example_grid1.jpg\n",
-            "Resolving s3-us-west-1.amazonaws.com (s3-us-west-1.amazonaws.com)... 52.219.194.24\n",
-            "Connecting to s3-us-west-1.amazonaws.com (s3-us-west-1.amazonaws.com)|52.219.194.24|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 7370 (7.2K) [image/jpeg]\n",
-            "Saving to: ‘example_grid1.jpg’\n",
-            "\n",
-            "example_grid1.jpg   100%[===================>]   7.20K  --.-KB/s    in 0s      \n",
-            "\n",
-            "2023-08-07 15:49:26 (291 MB/s) - ‘example_grid1.jpg’ saved [7370/7370]\n",
-            "\n"
-          ]
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -381,26 +364,37 @@
     {
       "cell_type": "code",
       "source": [
-        "# %matplotlib ipympl\n",
-        "%matplotlib notebook\n",
-        "%matplotlib notebook\n",
-        "\n"
+        "matplotlib.pyplot.switch_backend(newbackend)"
       ],
       "metadata": {
-        "id": "Sz8U0Y_JvilH",
-        "outputId": "8d798fb5-15be-41f2-ac9e-b9bc8ea048b9",
+        "id": "2T2cXPRbyNOl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# %matplotlib ipympl\n",
+        "# %matplotlib notebook\n",
+        "# %matplotlib notebook\n",
+        "%matplotlib widget"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "Sz8U0Y_JvilH",
+        "outputId": "e7750eea-5945-4df4-e132-7a6855691ec8"
       },
-      "execution_count": 58,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Warning: Cannot change to a different GUI toolkit: ipympl. Using notebook instead.\n"
+            "Warning: Cannot change to a different GUI toolkit: widget. Using notebook instead.\n"
           ]
         }
       ]
@@ -408,9 +402,6 @@
     {
       "cell_type": "code",
       "source": [
-        "%matplotlib notebook\n",
-        "%matplotlib notebook\n",
-        "\n",
         "import matplotlib\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -424,14 +415,14 @@
         "cid = fig.canvas.mpl_connect('button_press_event', onclick)"
       ],
       "metadata": {
-        "id": "y7XG4pwKvnvO",
-        "outputId": "d320a8f0-1819-4d35-eefc-ab086798e06d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
-        }
+        },
+        "id": "y7XG4pwKvnvO",
+        "outputId": "bb129dc2-b801-4747-8748-7e518e6cf28a"
       },
-      "execution_count": 64,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1425,7 +1416,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div id='4dd8cb4b-1715-42cc-a84c-974fcde4b2f8'></div>"
+              "<div id='bfc7345d-0559-4391-83a6-f69bbd54bf7b'></div>"
             ]
           },
           "metadata": {}
@@ -1436,7 +1427,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "iUUwa-cAxHKD"
+        "id": "ySEWYK7bx9mw"
       },
       "execution_count": null,
       "outputs": []
